# Chip8_Python

./: .gitignore  README.md  main.py  pyproject.toml  specifications.txt
.github/workflows/: ci.yml
scripts/: generate_beep.py
src/chip8/: cli.py
src/chip8/core/: opcodes.py  types.py
src/chip8/shell/: perun_shell.py  window.py
tests/: test_fx0a.py  test_opcodes.py
tests/data/: test_cases.json
